--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -193,7 +193,7 @@
                                     </div>
                                 </div>
 
-<!----- MODAL FOR UPDATE ---------->
+<!----- MODAL FOR HISTORY ---------->
                                 <div class="modal fade" id="history" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                     <div class="modal-dialog modal-dialog-centered modal-xl">
                                         <div class="modal-content">
