--- a/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
@@ -46,12 +46,92 @@
 <!-- Dashboard -->
 <div id="grid" class="container-fluid" style="margin-top: 85px;">
     <div class="container-grid p-4">
-        <div class="">
-            <div class="row"> 
-                <div class="d-flex justify-content-sm-start justify-content-center ">
-                    <h3>Preschooler's Profile</h3>
+        <div class="row"> 
+            <div class="col-xl-8 col-md-6 col-12 mb-3 text-md-start text-center">
+                <h3>Preschooler's Profile</h3>
+            </div>
+            <div class="col-xl-4  col-md-6 col-12">
+                <div class="row d-flex justify-content-center align-items-stretch">
+                    <div class="mb-3 d-flex justify-content-md-end justify-content-center h-100">
+                        <button style="background-color: #188045; color: white; max-height: 70px !important; height: 100%; margin-left: 10px;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#pres_history"><span class="fas fa-history"></span> Nutritional Status History</button>
+                        <a href="{% url 'immunization_schedule' preschooler.id %}"><button style="background-color: #188045; color: white; margin-left:10px; max-height: 70px !important;" type="button" class="btn"><span class="fa fa-address-card"></span> Immunization Status</button></a>
+                    </div>
                 </div>
             </div>
+<!----- MODAL FOR HISTORY ---------->
+            <div class="modal fade" id="pres_history" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-xl">
+                    <div class="modal-content">
+                        <div class="modal-header d-flex align-items-center justify-content-between">
+                            <div>
+                                <h5 class="modal-title fas fa-history" id="exampleModalLabel"> Nutritional Status History</h5>
+                            </div>
+                            <div >
+                                <button type="button" class="btn" style="background-color: #EF3A25; color: white;" data-bs-dismiss="modal" aria-label="Close"> Close</button>
+                            </div>
+                        </div>
+                        <div class="modal-body p-0">
+                            <div class="table-responsive " style="margin:30px;">
+                                <table class="table table-hover table-cell-border" id="NutStat_pres_history" >
+                                    <thead>
+                                        <tr style="text-align: center;">
+                                            <th scope="col">No.</th>
+                                            <th scope="col">Date Measured</th>
+                                            <th scope="col">Weight</th>
+                                            <th scope="col">Height</th>
+                                            <th scope="col">Weight for Age (WFA)</th>
+                                            <th scope="col">Height for Age (HFA)</th>
+                                            <th scope="col">Weight for Height for Age (WHFA)</th>
+                                        </tr>   
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                        </tr>
+                                    </tbody>
+                                    <!-- <tbody>
+                                        {% for preschooler in archive_preschoolers %}
+                                        <tr style="text-align: center;">
+                                            <td></td>
+                                            <td>{{ preschooler.first_name }}</td>
+                                            <td>{{ preschooler.middle_name }}</td>
+                                            <td>{{ preschooler.last_name }}</td>
+                                            <td>{{ preschooler.suffix_name }}</td>
+                                            <td>{{ preschooler.birthday }}</td>
+                                            <td>{{ preschooler.age_months }}</td>
+                                            {% if preschooler.bmifa is None %}
+                                            
+                                                <td> No Data Record </td>
+                                            {% elif preschooler.bmifa > 3.0%}
+                                                <td style="background-color: rgb(242, 98, 33);"> Obese ({{ preschooler.bmifa }})</td>
+                                            {% elif preschooler.bmifa > 2.0 %}
+                                                <td style="background-color: rgb(242, 98, 33);"> Overweight ({{ preschooler.bmifa }})</td>
+                                            {% elif preschooler.bmifa >= -2.0 and preschooler.bmifa <= 2.0 %}
+                                                <td style="background-color: rgb(0, 165, 79);"> Normal ({{ preschooler.bmifa}})</td>
+                                            {% elif preschooler.bmifa >= -3.0 and preschooler.bmifa <= -2.0 %}
+                                                <td style="background-color: rgb(255, 241, 2);"> Wasted ({{ preschooler.bmifa }})</td>
+                                            {% else %}
+                                                <td style="background-color: rgb(238, 29, 35);"> Severely Wasted ({{preschooler.bmifa }})</td>
+                                            {% endif %}                                   
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody> -->
+                                </table>
+                            </div>
+                        </div>
+                        <div class="card-footer text-center ">
+                            <h5 class="text-muted h4">Preschooler's nutritional status history</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <hr>
         </div>
         <div>
@@ -490,38 +570,26 @@
         </div>
     </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script>
-  const labels = [
-    'January',
-    'February',
-    'March',
-    'April',
-    'May',
-    'June',
-  ];
 
-  const data = {
-    labels: labels,
-    datasets: [{
-      label: 'Preschooler BMI Status',
-      backgroundColor: 'rgb(255, 99, 132)',
-      borderColor: 'rgb(255, 99, 132)',
-      data: [0, 10, 5, 2, 20, 30, 45],
-    }]
-  };
+<script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
 
-  const config = {
-    type: 'line',
-    data: data,
-    options: {}
-  };
-</script>
 <script>
-  const myChart = new Chart(
-    document.getElementById('myChart'),
-    config
-  );
+    var t = $('#NutStat_pres_history').DataTable({
+        dom: 'frtip',
+        aoColumnDefs: [{
+            'bSortable': false,
+            'aTargets': ['nosort'],
+            'orderable': false,
+            'targets': [0, 6],
+        }],
+        order: [[1, 'asc']],
+        });
+        t.on('order.dt search.dt', function () {
+        let i = 1;
+        t.cells(null, 0, { search: 'applied', order: 'applied' }).every(function (cell) {
+            this.data(i++);
+        });}).draw();
 </script>
 
 {% endblock %}
