--- a/ppms_project/profilingApp/templates/activities/Change Password.html
+++ b/ppms_project/profilingApp/templates/activities/Change Password.html
@@ -128,7 +128,12 @@
                             <div class="d-flex justify-content-center">
                                 <p >Change Password </p> 
                             </div>
-                            <hr>    
+                            <hr>
+                            <div class="col md-form p-2 d-flex justify-content-end">
+                                <label class="mx-2"id="user-lbl" data-error="wrong" data-success="right">Old Password: </label>
+                                {{ form.old_password }}
+                                
+                            </div>
                             <div class="col md-form p-2 d-flex justify-content-end">
                                 <label class="mx-2"id="user-lbl" data-error="wrong" data-success="right">New Password: </label>
                                 {{ form.new_password1 }}
@@ -142,10 +147,17 @@
                     </div>
                 </div>
                 <div class="card-footer">
-                    <div class="d-flex justify-content-end">
-                        <a href="{% url 'bhw_home' %}"><button type="button" style="background-color: #EF3A25; color: white;" class="btn">Cancel</button></a>
-                        <input class="btn btn-primary px-3" type="submit" name="Confirm" value="Save Changes" style="margin-left: 1%; background-color: rgb(44, 95, 34);">
-                    </div>
+                    {% if user.user_type == 'BHW' %}
+                        <div class="d-flex justify-content-end">
+                            <a href="{% url 'bhw_home' %}"><button type="button" style="background-color: #EF3A25; color: white;" class="btn">Cancel</button></a>
+                            <input class="btn btn-primary px-3" type="submit" name="Confirm" value="Save Changes" style="margin-left: 1%; background-color: rgb(44, 95, 34);">
+                        </div>
+                    {% elif user.user_type == 'P/G' %}
+                        <div class="d-flex justify-content-end">
+                            <a href="{% url 'parent_home' %}"><button type="button" style="background-color: #EF3A25; color: white;" class="btn">Cancel</button></a>
+                            <input class="btn btn-primary px-3" type="submit" name="Confirm" value="Save Changes" style="margin-left: 1%; background-color: rgb(44, 95, 34);">
+                        </div>
+                    {% endif %}
                 </div>
                 </form>
             </div>
