--- a/ppms_project/profilingApp/templates/activities/BHW Immunization Status.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Immunization Status.html
@@ -134,7 +134,7 @@
                                             <!-- <form method="POST" onsubmit="get_cred($('#type').val());"> -->
                                                 <div class="md-form">
                                                     <label id="user-lbl" data-error="wrong" data-success="right">Vaccine: </label>
-                                                    <select required class="form-select" name="vax_name" aria-label="Default select example" onfocus="changeNum(this)">
+                                                    <select required class="form-select" name="vax_name" aria-label="Default select example" onchange="changeNum(this)">
                                                         {% if 'BCG' in vax_list and 'Hepatitis B' in vax_list and 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list and 'Measles Containing Vaccines' in vax_list and 'Tetanus Toxoid' in vax_list and 'Inactivated Polio Vaccine' in vax_list and 'Measles Mumps - Rubella' in vax_list and dose_list.7 == 2 %}
                                                             <option disabled value="BCG">BCG</option>
                                                             <option disabled value="Hepatitis B">Hepatitis B</option>
@@ -152,6 +152,7 @@
                                                             <!-- <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option> -->
                                                             <!-- <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option> -->
                                                             <!-- <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option> -->
+                                                            <option selected value="---">---</option>
                                                             <option value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
                                                         {% elif 'BCG' in vax_list and 'Hepatitis B' in vax_list and 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list and 'Measles Containing Vaccines' in vax_list and 'Tetanus Toxoid' in vax_list %}
                                                             <!-- <option disabled value="BCG">BCG</option> -->
@@ -160,6 +161,7 @@
                                                             <!-- <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option> -->
                                                             <!-- <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option> -->
                                                             <!-- <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option> -->
+                                                            <option selected value="---">---</option>
                                                             <option value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
                                                             <option disabled value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
                                                         {% elif 'BCG' in vax_list and 'Hepatitis B' in vax_list and 'Oral Poliovirus Vaccine' in vax_list and 'Pentavalent Vaccine' in vax_list and 'Measles Containing Vaccines' in vax_list and dose_list.4 == 3 %}
@@ -168,6 +170,7 @@
                                                             <!-- <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option> -->
                                                             <!-- <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option> -->
                                                             <!-- <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option> -->
+                                                            <option selected value="---">---</option>
                                                             <option value="Tetanus Toxoid">Tetanus Toxoid</option>
                                                             <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
                                                             <option disabled value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
@@ -176,6 +179,7 @@
                                                             <!-- <option disabled value="Hepatitis B">Hepatitis B</option> -->
                                                             <!-- <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option> -->
                                                             <!-- <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option> -->
+                                                            <option selected value="---">---</option>
                                                             <option value="Measles Containing Vaccines">Measles Containing Vaccines</option>
                                                             <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option>
                                                             <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
@@ -184,6 +188,7 @@
                                                             <!-- <option disabled value="BCG">BCG</option> -->
                                                             <!-- <option disabled value="Hepatitis B">Hepatitis B</option> -->
                                                             <!-- <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option> -->
+                                                            <option selected value="---">---</option>
                                                             <option value="Pentavalent Vaccine">Pentavalent Vaccine</option>
                                                             <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
                                                             <option disabled value="Tetanus Toxoid">Tetanus Toxoid</option>
@@ -192,6 +197,7 @@
                                                         {% elif 'BCG' in vax_list and 'Hepatitis B' in vax_list %}
                                                             <!-- <option disabled value="BCG">BCG</option> -->
                                                             <!-- <option disabled value="Hepatitis B">Hepatitis B</option> -->
+                                                            <option selected value="---">---</option>
                                                             <option value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
                                                             <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
                                                             <option disabled value="Measles Containing Vaccines">Measles Containing Vaccines</option>
@@ -200,6 +206,7 @@
                                                             <option disabled value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
                                                         {% elif 'BCG' in vax_list %}
                                                             <!-- <option value="BCG">BCG</option> -->
+                                                            <option selected value="---">---</option>
                                                             <option value="Hepatitis B">Hepatitis B</option>
                                                             <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
                                                             <option disabled value="Pentavalent Vaccine">Pentavalent Vaccine</option>
@@ -208,6 +215,7 @@
                                                             <option disabled value="Inactivated Polio Vaccine">Inactivated Polio Vaccine</option>
                                                             <option disabled value="Measles Mumps - Rubella">Measles Mumps - Rubella</option>
                                                         {% else %}
+                                                            <option selected value="---">---</option>
                                                             <option value="BCG">BCG</option>
                                                             <option disabled value="Hepatitis B">Hepatitis B</option>
                                                             <option disabled value="Oral Poliovirus Vaccine">Oral Poliovirus Vaccine</option>
@@ -221,11 +229,11 @@
                                                 </div>
                                                 <div class="md-form">
                                                     <label id="user-lbl" data-error="wrong" data-success="right">Dose(s):</label>
-                                                    <input required class="form-control" type="number" min="1" max="3" name="dose" id="dose">
+                                                    <input required class="form-control" type="number" min="1" max="1" name="dose" id="dose">
                                                 </div>
                                                 <div class="md-form">
                                                     <label id="user-lbl" data-error="wrong" data-success="right">Required Doses:</label>
-                                                    <label id="required_dose" for=""></label>
+                                                    <label id="required_dose" for="">1</label>
                                                 </div>
                                                 <div class="md-form">
                                                     <label id="user-lbl" data-error="wrong" data-success="right">Immunization Date:</label>
@@ -248,7 +256,6 @@
                             <br>
                             <thead>
                                 <tr>
-                                    <th scope="col" class="text-center">No.</th>
                                     <th scope="col" class="text-center">Vaccine</th>
                                     <th scope="col" class="text-center">Doses</th>
                                     <th scope="col" class="text-center">Required Doses</th>
@@ -260,21 +267,18 @@
                             <tbody>
                                 <tr>
                                     {% if vaccine.vax_name == 'Oral Poliovirus Vaccine' or vaccine.vax_name == 'Pentavalent Vaccine' or vaccine.vax_name == 'Measles Containing Vaccines' %}
-                                        <td class="text-center"></td>
                                         <td class="text-center">{{ vaccine.vax_name }}</td>
                                         <td class="text-center">{{ vaccine.vax_dose }}</td>
                                         <td class="text-center">3</td>
                                         <td class="text-center">{{ vaccine.vax_date }}</td>
                                         <td class="text-center">{{ vaccine.vax_remarks }}</td>
                                     {% elif vaccine.vax_name == 'Inactivated Polio Vaccine' or vaccine.vax_name == 'Measles Mumps - Rubella' %}
-                                        <td class="text-center"></td>
                                         <td class="text-center">{{ vaccine.vax_name }}</td>
                                         <td class="text-center">{{ vaccine.vax_dose }}</td>
                                         <td class="text-center">2</td>
                                         <td class="text-center">{{ vaccine.vax_date }}</td>
                                         <td class="text-center">{{ vaccine.vax_remarks }}</td>
                                     {% else %}
-                                        <td class="text-center"></td>
                                         <td class="text-center">{{ vaccine.vax_name }}</td>
                                         <td class="text-center">{{ vaccine.vax_dose }}</td>
                                         <td class="text-center">1</td>
@@ -291,7 +295,8 @@
         </div>
     </div>
 </div>
-
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
     $(function(){
         var dtToday = new Date();
@@ -312,21 +317,42 @@
 
     function changeNum (vax_name) {
         if (vax_name.value === "Oral Poliovirus Vaccine") {
+            document.getElementById('dose').setAttribute('max', 3);
             document.getElementById("dose").value = "{{ dose_list.2 }}";
-            document.getElementById("required_dose").textContent = 3;
+            document.getElementById("required_dose").innerHTML = 3;
 
         } else if (vax_name.value === "Pentavalent Vaccine") {
+            document.getElementById('dose').setAttribute('max', 3);
             document.getElementById("dose").value = "{{ dose_list.3 }}";
-            document.getElementById("required_dose").value = 3;
+            document.getElementById("required_dose").innerHTML = 3;
 
         } else if (vax_name.value === "Measles Containing Vaccines") {
+            document.getElementById('dose').setAttribute('max', 3);
             document.getElementById("dose").value = "{{ dose_list.4 }}";
-            document.getElementById("required_dose").textContent = 3;
+            document.getElementById("required_dose").innerHTML = 3;
             
         } else if (vax_name.value === "Inactivated Polio Vaccine" || vax_name.value === "Measles Mumps - Rubella") {
+            document.getElementById('dose').setAttribute('max', 2);
             document.getElementById("dose").value = 1;
-            document.getElementById("required_dose").value = 2;
+            document.getElementById("required_dose").innerHTML = 2;
         }
     };
 </script>
+{% if messages %}
+    {% for message in messages %}
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
+            <script>
+                Swal.fire({
+                icon: 'warning',
+                title: 'Invalid',
+                text: '{{message}}',
+                confirmButtonText: "Ok",
+                confirmButtonColor: '#EF3A25',
+            }).then(function() {
+                window.location = "{% url 'immunization_schedule' preschooler.id %}";
+            });
+            </script>
+        {% endif %}
+    {% endfor %}
+{% endif %}
 {% endblock %}
