--- a/ppms_project/profilingApp/static/CSS/styles.css
+++ b/ppms_project/profilingApp/static/CSS/styles.css
@@ -129,6 +129,14 @@ tbody tr:nth-of-type(even) {
   display: none;
 }
 @media screen and (max-width: 520px) {
+
+  #profileCard{
+    margin-left:5%; margin-right:5%; margin-top: 85px;
+  }
+
+  #profileCard2{
+    margin-left:5%; margin-right:5%; margin-top: 5px;
+  }
   
 
   #toggle{
@@ -301,7 +309,6 @@ button.back-button {
 #parentButton{
   color:rgba(0, 19, 0, 0.87); 
   padding: 13 13 13 13;
-  background-color: #ebebeb60;
   border-radius: 50%;
   margin-left: 15px;
   position: relative;
@@ -310,7 +317,6 @@ button.back-button {
 #parentButton:hover{
   color: rgb(40, 167, 69);
   -webkit-transform: scale(1.05);
-  background-color: #e4e4e39f;
   transform: scale(1.05);
 }
 
@@ -404,10 +410,11 @@ html {
     height: 100%;
   }
   /* Mobile size resolution styling for responsiveness*/
-  @media (max-width: 520px) {
+  @media (max-width: 570px) {
     .form-group .form-remember {
       font-size: 8px;
       font-weight: 400;
+      line-height: 10px;
       letter-spacing: 0;
       text-transform: none;
     }
@@ -523,8 +530,9 @@ html {
       text-decoration: none;
     }
     .form-panel.one{
-      padding: 35px 60px 20px 60px;
+      padding: 30px 30px 30px 30px;
     }
+    
     .form-panel.two.active{
       padding: 35px 60px 20px 35px;
     }
@@ -610,6 +618,14 @@ html {
 
    /* Medium Responsiveness */
   @media (max-width: 770px) { 
+    #profileCard{
+      margin-left:10%; margin-right:10%; margin-top: 85px;
+    }
+
+    #profileCard2{
+      margin-left:10%; margin-right:10%; margin-top: 5px;
+    }
+
     .form {
       z-index: 15;
       position: relative;
@@ -619,8 +635,8 @@ html {
       box-sizing: border-box;
       margin: 100px auto 10px;
       overflow: hidden;
-      height: 95%;
-      width: 95%;
+      height: 98%;
+      width: 98%;
       padding: 0%;
     }
     .form-toggle {
@@ -708,7 +724,7 @@ html {
       border: 0;
       border-radius: 6px;
       box-sizing: border-box;
-      padding: 9px 20px;
+      padding: 12px 20px;
       color: rgba(0, 0, 0, 0.6);
       font-family: inherit;
       font-size: inherit;
@@ -839,6 +855,14 @@ html {
 
 
   @media (min-width: 770px) { 
+    #profileCard{
+      margin-left:20%; margin-right:20%; margin-top: 85px;
+    }
+
+    #profileCard2{
+      margin-left:20%; margin-right:20%; margin-top: 5px;
+    }
+
     .form {
       z-index: 15;
       position: relative;
@@ -902,9 +926,20 @@ html {
     height: 35%;
     width: 35%;
   }
+
+  #profileCard{
+    margin-left:30%; margin-right:30%; margin-top: 85px;
+  }
+
+  #profileCard2{
+    margin-left:30%; margin-right:30%; margin-top: 5px;
+  }
 }
 
-  @media (min-width: 700px) { 
+
+  @media (min-width: 570px) { 
+
+  
   .form-group{
     display: flex;
     flex-wrap: wrap;
@@ -1082,9 +1117,6 @@ html {
     color: #FFFFFF;
   }
 }
-
-
-  /* Barangay Dropdown Button */
 
   /* Create Account Button */
   #createAccountButton{
