--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler_barangay.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler_barangay.html
@@ -26,17 +26,17 @@
                             </a>
                         </li>
                         <li>
-                            <a href="{% url 'admin_home2' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
+                            <a href="{% url 'admin_home2' %}" class="nav-link" style="color:rgb(27, 177, 92) !important;" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                             title="Preschooler Status">
                             <i id="navIcon" class="fa fa-3x fa-fw fa-id-card " style="font-size: 24px;"></i>
-                            <span id="navText" style="font-size: 20px; " >Preschooler Status</span>
+                            <span id="navText" style="font-size: 20px; color:rgb(27, 177, 92) !important;" >Preschooler Status</span>
                             </a>
                         </li>
                         <li>
-                            <a href="{% url 'admin_barangay' %}" style="color:rgb(27, 177, 92) !important;"class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
+                            <a href="{% url 'admin_barangay' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                             title="List of Barangay">
                             <i id="navIcon" class="fa fa-3x fa-fw fas fa-landmark " style="font-size: 24px;"></i>
-                            <span id="navText" style="font-size: 20px;color:rgb(27, 177, 92) !important;" >List of Barangay</span>
+                            <span id="navText" style="font-size: 20px;">List of Barangay</span>
                             </a>
                         </li>
                         <li>
@@ -118,9 +118,9 @@
                     <h3>{{ brgy }}</h3>
                 </div>
                 <div class="col-sm-4  mb-3 d-flex justify-content-sm-end justify-content-center">
-                    <div class="card text-right  shadow-sm" style="width: 10rem;">
+                    <div class="text-right " style="width: 10rem;">
                         <div class="dropdown text-center" >
-                            <h6 class="text-uppercase text-muted dropdown-header">Barangay</h6>
+                            <h6 class="text-uppercase text-dark dropdown-header"><i class="fa fa-3x fa-fw fas fa-landmark " style="font-size: 15px; margin-right: 5px;"></i>Barangay</h6>
                             <select class="form-select " aria-label="Default select example" onchange="javascript:handleNextView(this)">
                                 <option selected disabled >{{ brgy }}</option>
                                 <option value="{% url 'admin_home2' %}">All</option>
@@ -134,20 +134,21 @@
                 </div>
                 <hr>
             </div>
-        </div>
             <div class="row d-flex align-items-stretch">
-            <div class="col-xl-3 col-md-6 mb-2">
+                <div class="col-md mb-2">
                 <div class="card shadow-sm bg-white rounded h-100">
+                        <!-- <div class="card-header" style="background-color: rgb(0, 165, 79) !important;"> -->
                         <div class="card-header">
-                            <h4 class="card-title">Normal</h4>
+                            <h4 class="card-title">Severely Wasted</h4>
                         </div>
                         <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ normal }}</p>
+                            <p style="font-size: xx-large;" class="card-text">{{ severly }}</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6 mb-2">
+                <div class="col-md mb-2">
                     <div class="card shadow-sm bg-white rounded h-100">
+                        <!-- <div class="card-header" style="background-color: rgb(233, 221, 0) !important;"> -->
                         <div class="card-header">
                             <h4 class="card-title">Wasted</h4>
                         </div>
@@ -156,23 +157,36 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6 mb-2">
+                <div class="col-md mb-2">
                     <div class="card shadow-sm bg-white rounded h-100 ">
-                        <div class="card-header ">
-                            <h4 class="card-title">Severly Wasted</h4>
+                        <!-- <div class="card-header " style="background-color: rgb(238, 29, 35) !important;"> -->
+                        <div class="card-header">
+                            <h4 class="card-title">Normal</h4>
                         </div>
                         <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ severly }}</p>
+                            <p style="font-size: xx-large;" class="card-text">{{ normal }}</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6 mb-2">
+                <div class="col-md mb-2">
                     <div class="card shadow-sm bg-white rounded h-100 ">
-                        <div class="card-header">
-                            <h4 class="card-title">Overweight/Obese</h4>
+                        <!-- <div class="card-header" style="background-color: rgb(242, 98, 33)!important;"> -->
+                            <div class="card-header">
+                            <h4 class="card-title">Overweight</h4>
                         </div>
                         <div class="card-body text-center">
                             <p style="font-size: xx-large;" class="card-text">{{ overobese }}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md mb-2">
+                    <div class="card shadow-sm bg-white rounded h-100">
+                        <!-- <div class="card-header" style="background-color: rgb(233, 221, 0) !important;"> -->
+                        <div class="card-header">
+                            <h4 class="card-title">Obese</h4>
+                        </div>
+                        <div class="card-body text-center">
+                            <p style="font-size: xx-large;" class="card-text">{{ wasted }}</p>
                         </div>
                     </div>
                 </div>
@@ -184,7 +198,7 @@
                 </div>
                 <div class="card shadow-sm bg-white rounded">
 
-                    <div class="card-body p-3 ">
+                    <div class="card-body p-4">
                         <canvas id="myBar" width="100%" height="50"></canvas>
                     </div>
                     <div class="card-footer small text-muted">
@@ -220,21 +234,23 @@
         }
     },
     data:{
-        labels: ["Normal", "Wasted", "Severly Wasted","Overweight/Obese"],
+        labels: ["Severely Wasted", "Wasted", "Normal","Overweight","Obese"],
         datasets: [{
                 label: 'Normal',
                 data: data_count,
                 backgroundColor: [
-                'rgb(0, 165, 79)',
-                'rgb(255, 241, 2)',
                 'rgb(238, 29, 35)',
+                'rgb(255, 241, 2)',
+                'rgb(0, 165, 79)',
+                'rgb(242, 98, 33)',
                 'rgb(242, 98, 33)',
                 ],
                 borderColor: [
-                'rgb(0, 165, 79)',
-                'rgb(255, 241, 2)',
                 'rgb(238, 29, 35)',
-                'rgb(242, 98, 33)',,
+                'rgb(255, 241, 2)',
+                'rgb(0, 165, 79)',
+                'rgb(242, 98, 33)',
+                'rgb(242, 98, 33)',
                 ],
                 borderWidth: 1
             }
