--- a/ppms_project/profilingApp/templates/activities/Change Password.html
+++ b/ppms_project/profilingApp/templates/activities/Change Password.html
@@ -19,7 +19,7 @@
 <header>
     <div class="site-header">
     <nav class="navbar fixed-top index__navbar scrolled" 
-    style=" padding-left:3%; padding-right:3%; background-color: rgba(0, 0, 0, 0);">
+    style=" padding-left:3%; padding-right:3%; background-color: rgba(255, 255, 255, 0.803);">
         <div class="flex-fill p-1 py-1">
             <div class="d-flex align-items-center justify-content-end">
                 <div id="navLinks">
@@ -52,11 +52,11 @@
    })
  </script>
  
-<body class="mt-0 mb-0 d-flex align-items-stretch" style="background-color: black;">
+ <body class="mt-0 mb-0 d-flex" style="background-color: black; height: auto; flex-wrap: wrap;">
     <!-- Dashboard -->
     <div id="grid" class="container-fluid mt-0">
-        <div class="container-grid" style="padding: 0% 0% 0% 0%;">
-            <div class="card" style="margin-left:30%; margin-right:30%; margin-top: 65px;">
+        <div class="container-grid">
+            <div id="profileCard" class="card">
                 <div class="card-header">
                     <h4 class="d-flex justify-content-center"><i class="fas fa-clipboard-check mx-2"></i>User Profile</h4>
                 </div>
@@ -118,29 +118,29 @@
                 </div>
             </div>
             <br>
-            <div class="card" style="margin-left:30%; margin-right:30%;">
+            <div id="profileCard2" class="card">
                 
                 <form action="" method="POST">
                     {% csrf_token %}
-                <div class="card-body p-4">
-                    <div class="md-form justify-content-center d-flex">
+                <div class="card-body p-3">
+                    <div class="md-form justify-content-center d-flex" style="width:100%;">
                         <div class="row d-block justify-content-center align-items-center">
                             <div class="d-flex justify-content-center">
                                 <p >Change Password </p> 
                             </div>
                             <hr>
-                            <div class="col md-form p-2 d-flex justify-content-end">
+                            <div class="col md-form p-2 d-flex justify-content-sm-end justify-content-center flex-wrap ">
                                 <label class="mx-2"id="user-lbl" data-error="wrong" data-success="right">Old Password: </label>
                                 {{ form.old_password }}
                                 
                             </div>
-                            <div class="col md-form p-2 d-flex justify-content-end">
+                            <div class="col md-form p-2 d-flex justify-content-sm-end justify-content-center flex-wrap ">
                                 <label class="mx-2"id="user-lbl" data-error="wrong" data-success="right">New Password: </label>
                                 {{ form.new_password1 }}
                                 
                             </div>
-                            <div class="col md-form p-2 d-flex">
-                                <label class="mx-2" id="user-lbl" data-error="wrong" data-success="right">Confirm New Password: </label>
+                            <div class="col md-form p-2 d-flex justify-content-sm-end justify-content-center flex-wrap ">
+                                <label class="mx-2" id="user-lbl" data-error="wrong" data-success="right">Confirm Password: </label>
                                 {{ form.new_password2 }}
                             </div>
                         </div>
@@ -148,13 +148,11 @@
                 </div>
                 <div class="card-footer">
                     {% if user.user_type == 'BHW' %}
-                        <div class="d-flex justify-content-end">
-                            <a href="{% url 'bhw_home' %}"><button type="button" style="background-color: #EF3A25; color: white;" class="btn">Cancel</button></a>
+                        <div class="d-flex justify-content-center">
                             <input class="btn btn-primary px-3" type="submit" name="Confirm" value="Save Changes" style="margin-left: 1%; background-color: rgb(44, 95, 34);">
                         </div>
                     {% elif user.user_type == 'P/G' %}
-                        <div class="d-flex justify-content-end">
-                            <a href="{% url 'parent_home' %}"><button type="button" style="background-color: #EF3A25; color: white;" class="btn">Cancel</button></a>
+                        <div class="d-flex justify-content-center">
                             <input class="btn btn-primary px-3" type="submit" name="Confirm" value="Save Changes" style="margin-left: 1%; background-color: rgb(44, 95, 34);">
                         </div>
                     {% endif %}
