bar graph fixed + remove today insert date_measured

--- a/ppms_project/profilingApp/templates/activities/BHW Home.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Home.html
@@ -161,7 +161,7 @@
                             <h4 class="card-title">Overweight</h4>
                         </div>
                         <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ overobese }}</p>
+                            <p style="font-size: xx-large;" class="card-text">{{ overweight }}</p>
                         </div>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
                             <h4 class="card-title">Obese</h4>
                         </div>
                         <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ overobese }}</p>
+                            <p style="font-size: xx-large;" class="card-text">{{ obese }}</p>
                         </div>
                     </div>
                 </div>
