--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
@@ -174,7 +174,7 @@
                             <h4 class="card-title">Overweight</h4>
                         </div>
                         <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ overobese }}</p>
+                            <p style="font-size: xx-large;" class="card-text">{{ overweight }}</p>
                         </div>
                     </div>
                 </div>
@@ -185,7 +185,7 @@
                             <h4 class="card-title">Obese</h4>
                         </div>
                         <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ wasted }}</p>
+                            <p style="font-size: xx-large;" class="card-text">{{ obese }}</p>
                         </div>
                     </div>
                 </div>
