--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -135,7 +135,7 @@
             <hr>
             <!-- MAIN CARDS STARTS HERE -->
             <div class="row d-flex align-items-stretch ">
-                <div class="col-xxl-8 col-lg-6 col-md-12 ">
+                <div class="col-xxl-8 col-lg-12 ">
                     <div class="row mb-3 align-items-stretch">
                         <!-- Validated BHW Count Card  -->
                         <div class="col-xxl-3 col-sm-6 mb-2">                      
@@ -267,13 +267,13 @@
                     </div>
                 </div>
                 <!-- Pie Chart Card  -->
-                <div class="container-fluid col-xxl-4 col-lg-6 col-md-12 align-self-stretch">
+                <div class="container-fluid col-xxl-4 col-md-12 align-self-stretch">
                     <div class="col-xl-12 mb-3">
-                        <div class="card shadow-sm bg-white rounded" >  
+                        <div class="card shadow-sm bg-white rounded">  
                             <div class="card-header">
                                 <i class="fas fa-lg fa-chart-pie" style="color:orange; position:relative; margin-right:10px;"></i>Overview Chart</div>
-                            <div class="card-body p-md-4">
-                                <canvas class="chart-view" id="myPieChart" width="470" height="550" style="display: block; box-sizing: border-box;"></canvas>  
+                            <div class="card-body p-md-4 d-flex flex-row justify-content-center text-center align-items-center">
+                                <canvas class="chart-view" id="myPieChart" width="470" height="550" style="display: block; box-sizing: border-box; max-height: 650; max-width: 570;" ></canvas>  
                             </div>
                         </div>
                     </div>
