--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -38,11 +38,11 @@
 <body style="background: radial-gradient(100vw, white, #1880455e);">
     <!-- Header -->
     <div class="site-header" >
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled" style="filter: drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.75));">
         <div class="container-fluid">
             <div>
                 <img class="navbar-icon animateNavbarIcon" style="margin-left:15px;" src="../static/Media/avatar.png" alt="dasma-logo">
-                <span id="hideHomeTitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas</span>
+                <span id="hideHomeTitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas - Preschooler Profiling and Monitoring System</span>
             </div>
         </div>
         </nav>
