--- a/ppms_project/profilingApp/static/CSS/styles.css
+++ b/ppms_project/profilingApp/static/CSS/styles.css
@@ -10,6 +10,7 @@
   max-height: 85px;
   background-color: white;
   border-bottom: 3px;
+  filter: drop-shadow(0px 0.8px 2px rgba(0, 0, 0, 0.75));
 }
 
 
@@ -353,10 +354,11 @@ button.back-button {
 
 /* Cards */ 
 
+
 .card-header{
   font-size: 13px;
   font-family: 'Poppins', sans-serif;;
-  background-color:#1bb15c !important;
+  background-color:#35af6a !important;
   color:white;
   padding: 10px 15px 5px 10px !important;
   text-align: center;
