title parent preschooler profile

--- a/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
@@ -1,4 +1,4 @@
-{% extends 'activities/BHW Home.html' %} <!-- header and footer of page linked from admin home html file -->
+{% extends 'activities/Parent Home.html' %} <!-- header and footer of page linked from admin home html file -->
 {% load static %}
 {% block dashboard %}
 
