--- a/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% block dashboard %}
 
+<title>{{ preschooler.first_name }} {{ preschooler.last_name }}'s Profile | PPMS </title>
+</head>
+
 <header>
     <div class="site-header">
     <nav class="navbar fixed-top index__navbar scrolled border-bottom" 
