--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -21,7 +21,7 @@
 
 
     {% block dashboard %}   
-    <title>{{ parent.user.first_name }} {{ parent.user.last_name }}</title>
+    <title>Home | PPMS </title>
 </head>
         <!-- Header -->
     <div class="site-header">
