--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -38,7 +38,7 @@
 <body style="background: radial-gradient(100vw, white, #1880455e);">
     <!-- Header -->
     <div class="site-header" >
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled" style="filter: drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.75));">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled">
         <div class="container-fluid">
             <div>
                 <img class="navbar-icon animateNavbarIcon" style="margin-left:15px;" src="../static/Media/avatar.png" alt="dasma-logo">
