--- a/ppms_project/profilingApp/templates/activities/BHW Home.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Home.html
@@ -18,10 +18,11 @@
     <script src="{% static '/Javascript/js/Chart.min.js' %}" crossorigin="anonymous"></script>
     <link rel="icon" href="{% static '/Media/Dasmalogo.png' %}" type="image/y-icon">
 
-    <title>BHW | PPMS</title>
+
+   {% block dashboard %} 
+    <title>Home | PPMS</title>
 </head>
 <body>
-{% block dashboard %}
 <!-- Header -->
 <header>
     <div class="site-header">
