--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% block dashboard %}
 
+<title>Preschooler Profile | PPMS</title>
+</head>
+<body>
+
 <header>
     <div class="site-header">
     <nav class="navbar fixed-top index__navbar scrolled border-bottom" 
