pie chart footer

--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -275,6 +275,9 @@
                                 <canvas class="chart-view" id="myPieChart" width="470" height="550" style="display: block; box-sizing: border-box; max-height: 650; max-width: 570;" ></canvas>  
                             </div>
                         </div>
+                        <div class="card-footer text-muted justify-content-center text-center align-items-center">
+                            <p> hover over colored area to see value</p>
+                        </div>
                     </div>
                 </div>
             </div>
