--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -42,13 +42,13 @@
         <div class="container-fluid">
             <div>
                 <img class="navbar-icon animateNavbarIcon" style="margin-left:15px;" src="../static/Media/avatar.png" alt="dasma-logo">
-                <span id="hideHomeTitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas - Preschooler Profiling and Monitoring System</span>
+                <span class="brand__name" style="color:#2c5f2dff; margin-left:10px;">City of Dasmariñas - PPMS</span>
             </div>
         </div>
         </nav>
     </div>
     <!-- Form -->
-    <div class="container-fluid" id="homeBody" style="padding-top:85px;" >
+    <div class="container-fluid" id="homeBody" style="padding-top:45px;" >
         <div class="form shadow-lg" id="formHeight">
             <div class="form-toggle"></div>
             <div class="form-panel one d-flex justify-content-center flex-column">
