--- a/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block dashboard %}
 
-<title>Preschooler Dashboard | PPMS</title>
+<title>{{ bhw.user.first_name }} {{ bhw.user.last_name }} | Preschooler Dashboard</title>
 </head>
 <body>
 
